[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "linex2metaspace"
version = "0.2.0"
authors = [
    {name = "Tim Daniel Rose", email = "tim.rose@embl.de"},
]
readme = "README.md"
description = "Improve lipid annotations from METASPACE data using metabolic networks"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    'linex2>=1.1.11', 
    'networkx', 
    "pandas", 
    "matplotlib", 
    "numpy",
    "tqdm", 
    "anndata",
    "scanpy"
]


[project.urls]
Repository = "https://github.com/tdrose/lipidranking_metaspace"
Source = "https://github.com/tdrose/lipidranking_metaspace"
Documentation = "https://tdrose.github.io/lipidranking_metaspace/"
# Publication = ""

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}


[project.optional-dependencies]
docs = [
    "sphinx~=7.2",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "metaspace2020",
    "metaspace-converter",
    "nbsphinx"
]
